<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/album_entry"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/entry_name"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit ="marquee_forever"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:scrollHorizontally="true"
        android:gravity="center_vertical"
        android:layout_height="50dp"
        android:layout_width="0dp"
        android:layout_alignParentStart="true"
        android:padding="@dimen/entry_margin"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>